collage spelling changed to college

--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
-    <title>Royal B.ed collage -Gallery  </title>
+    <title>Royal B.ed college -Gallery  </title>
     <link rel="icon"type="image/x-icon" href="./assets/images/royal college logo.png">
 
     <!-- Bootstrap core CSS -->
@@ -229,7 +229,7 @@
       <div class="col-lg-6">
         <div class="row">
           <div class="col-lg-12">
-            <h2>A Few Facts About Our Royal Collage of Education </h2>
+            <h2>A Few Facts About Our Royal College of Education </h2>
           </div>
           <div class="col-lg-6">
             <div class="row">
