--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Nexus Digitalia">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
-    <title>Royal Collage B.ed Collage  of Education - Home</title>
+    <title>Royal College B.ed College  of Education - Home</title>
     <link rel="icon"type="image/x-icon" href="./assets/images/royal college logo.png">
     <!-- Favicons -->
     <link href="./assets/images/Royal College - Logo png.png" rel="icon">
@@ -351,7 +351,7 @@
             </article>
             <article class="accordion">
                 <div class="accordion-head">
-                    <span>Objectives of Royal collage </span>
+                    <span>Objectives of Royal college </span>
                     <span class="icon">
                         <i class="icon fa fa-chevron-right"></i>
                     </span>
@@ -369,7 +369,7 @@
             </article>
             <article class="accordion last-accordion">
                 <div class="accordion-head">
-                    <span>Who can join B.Ed Courses in Royal Collage </span>
+                    <span>Who can join B.Ed Courses in Royal College </span>
                     <span class="icon">
                         <i class="icon fa fa-chevron-right"></i>
                     </span>
