--- a/about_us.html
+++ b/about_us.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
-    <title>About us - Royal Collage of Education</title>
+    <title>About us - Royal College of Education</title>
     <link rel="icon"type="image/x-icon" href="./assets/images/royal college logo.png">
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -92,7 +92,7 @@
       <div class="row">
         <div class="col-lg-12">
           <h6>About Us</h6>
-          <h2>Royal Collage of Education Welcomes You</h2>
+          <h2>Royal College of Education Welcomes You</h2>
         </div>
       </div>
     </div>
@@ -106,7 +106,7 @@
   
       <div class="col-lg-4">
         <div class="text-center">
-          <h2 class="text-white mb-md-1"> Founder of Royal Collage  </h2>
+          <h2 class="text-white mb-md-1"> Founder of Royal College  </h2>
                <img style="width: 40%;" class="" src="./assets/images/royal_collage.gif" alt="">
          
               </div>
@@ -127,7 +127,7 @@
 <section class="py-5">
   <div class="container">
     <div class="row">
-      <div class="col-lg-6"><h2> Principal of <br>  Royal Collage of Education</h2></div>
+      <div class="col-lg-6"><h2> Principal of <br>  Royal College of Education</h2></div>
       <div class="col-lg-6">
         <h2>Our principal Message </h2>
         <p class="mt-2">My heart is filled with immense joy and finds no bound to highlight the various memorable events and meritorious academic activities held in our institution.
