--- a/carrer.html
+++ b/carrer.html
@@ -136,7 +136,7 @@
           <div class="accordions is-first-expanded">
             <article class="accordion">
                 <div class="accordion-head">
-                    <span>About Royal collage </span>
+                    <span>About Royal college </span>
                     <span class="icon">
                         <i class="icon fa fa-chevron-right"></i>
                     </span>
@@ -149,7 +149,7 @@
             </article>
             <article class="accordion">
                 <div class="accordion-head">
-                    <span>What we do in royal collage </span>
+                    <span>What we do in royal college </span>
                     <span class="icon">
                         <i class="icon fa fa-chevron-right"></i>
                     </span>
