--- a/contact_us.html
+++ b/contact_us.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
-    <title>Royal Collage of Education - Course</title>
+    <title>Royal College of Education - Course</title>
     <link rel="icon"type="image/x-icon" href="./assets/images/royal college logo.png">
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
