--- a/course.html
+++ b/course.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
-    <title>Royal Collage of Education - Course</title>
+    <title>Royal College of Education - Course</title>
     <link rel="icon"type="image/x-icon" href="./assets/images/royal college logo.png">
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -404,7 +404,7 @@
           </article>
           <article class="accordion">
               <div class="accordion-head">
-                  <span>Objectives of Royal collage </span>
+                  <span>Objectives of Royal college </span>
                   <span class="icon">
                       <i class="icon fa fa-chevron-right"></i>
                   </span>
@@ -422,7 +422,7 @@
           </article>
           <article class="accordion last-accordion">
               <div class="accordion-head">
-                  <span>Who can join B.Ed Courses in Royal Collage </span>
+                  <span>Who can join B.Ed Courses in Royal College </span>
                   <span class="icon">
                       <i class="icon fa fa-chevron-right"></i>
                   </span>
